--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@ l347 -3 0 -28 c0 -27 3 -29 53 -35 28 -3 82 -6 120 -6 60 0 67 -2 67 -20 0
         <div class="card-content">
           <h3>Volunteering in Indonesia</h3>
           <p>
-            As part of an organisation, I spent <b>3 weeks in Tianjar, Indonesia</b>. I collaborated with <b>international volunteers</b> and <b>Balinese locals</b>.
+            I spent <b>3 weeks in Tianjar, Indonesia</b>, where I collaborated with <b>international volunteers</b> and <b>Balinese locals</b>.
           </p>
           <p>
             The sea floors are destroyed by overfishing in Indonesia, our mission was to help <b>restore the coral population in the nearby beaches</b>, in close collaboration with locals.
@@ -179,7 +179,7 @@ l347 -3 0 -28 c0 -27 3 -29 53 -35 28 -3 82 -6 120 -6 60 0 67 -2 67 -20 0
         <div class="card-content">
           <h3>Volunteering in Sri Lanka</h3>
           <p>
-            I spent <b>2 months in Hikkaduwa, Sri Lanka</b>. I <b>collaborated with international volunteers</b> (mainly British) and <b>Sri Lankan locals</b>.
+            I spent <b>2 months in Hikkaduwa, Sri Lanka</b>, where I <b>collaborated with international volunteers</b> (mainly British) and <b>Sri Lankan locals</b>.
           </p>
           <p>
             In Sri Lanka, plastic pollution of the shore is a big problem, and sea turtles and their eggs are poached. Our mission was to <b>clean the sea shore, find turtle eggs and care for them until hatching and release into the wild</b>. 
@@ -218,7 +218,7 @@ l347 -3 0 -28 c0 -27 3 -29 53 -35 28 -3 82 -6 120 -6 60 0 67 -2 67 -20 0
         <div class="card-content">
           <h3>Homemade 737 Simulator</h3>
           <p>
-            While studying for my ATPL exams I was also building a <b>B737 simulator</b> which can be used with Microsoft Flight Simulator.
+            While studying for my ATPL exams I started building a <b>B737 simulator</b> which can be used with Microsoft Flight Simulator.
           </p>
           <p>
             At this time, I have built the <b>front overhead panel</b> as well as the <b>autopilot panel</b>.
@@ -399,30 +399,30 @@ l347 -3 0 -28 c0 -27 3 -29 53 -35 28 -3 82 -6 120 -6 60 0 67 -2 67 -20 0
             <tr>
               <td>CPL(A)</td>
               <td>POLAND</td>
-              <td>12/06/2021</td>
+              <td>28/01/2026</td>
               <td>—</td>
               <td>Skilltest passed on first attempt ✔</td>
             </tr>
             <tr>
               <td>IR(A)</td>
               <td>POLAND</td>
-              <td>12/06/2021</td>
-              <td>12/06/2024</td>
+              <td>28/01/2026</td>
+              <td>31/01/2027</td>
               <td>Skilltest passed on first attempt ✔</td>
             </tr>
             <tr>
               <td>MEP(L)</td>
               <td>POLAND</td>
-              <td>12/06/2021</td>
-              <td>12/06/2024</td>
+              <td>28/01/2026</td>
+              <td>31/01/2027</td>
               <td>Skilltest passed on first attempt ✔</td>
             </tr>
             <tr>
               <td>Class 1 Medical</td>
               <td>France</td>
-              <td>05/03/2024</td>
-              <td>05/03/2025</td>
-              <td>No limitations</td>
+              <td>13/11/2025</td>
+              <td>13/11/2026</td>
+              <td>-</td>
             </tr>
             <tr>
               <td>PPL(A)</td>
@@ -435,7 +435,7 @@ l347 -3 0 -28 c0 -27 3 -29 53 -35 28 -3 82 -6 120 -6 60 0 67 -2 67 -20 0
               <td>SEP(L)</td>
               <td>France</td>
               <td>05/03/2024</td>
-              <td>-</td>
+              <td>31/05/2026</td>
               <td>Skilltest passed of first attempt ✔</td>
             </tr>
             <tr>
@@ -449,10 +449,57 @@ l347 -3 0 -28 c0 -27 3 -29 53 -35 28 -3 82 -6 120 -6 60 0 67 -2 67 -20 0
           </table>
         </div>
       </div>
+      <!-- HOURS -->
+       <div class="card">
+      <h3>Flying times</h3>
+      <br/>
+      <div class="table-wrapper">
+        <table class="docs-table">
+          <thead>
+            <tr>
+              <th>Type of time</th>
+              <th>Time</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>Total Time on aeroplanes</td>
+              <td>274:42</td>
+            </tr>
+            <tr>
+              <td>PIC Time</td>
+              <td>112:24</td>
+            </tr>
+            <tr>
+              <td>Simulator Time</td>
+              <td>35:00</td>
+            </tr>
+            <tr>
+              <td>Single Engine Time</td>
+              <td>242:05</td>
+            </tr>
+            <tr>
+              <td>Multi Engine Time</td>
+              <td>32:07</td>
+            </tr>
+            <tr>
+              <td>IFR Time</td>
+              <td>19:57</td>
+            </tr>
+            </tbody>
+          </table>
+        </div>
+      </div>
       <!-- ATPL RESULTS -->
       <div class="card">
       <h3>ATPL Results</h3>
       <br/>
+      <p>
+        All ATPL subjects were passed while working a full time engineering job.
+      </p>
+      <p>
+        Average of 96.7%
+      </p>
       <div class="table-wrapper">
         <table class="docs-table">
           <thead>
