--- a/index.html
+++ b/index.html
@@ -15,6 +15,23 @@
 <div class="body-wrapper">
   <!-- Hero Section -->
   <div class="hero">
+    <div class="clouds">
+    <!-- Cloud 1 -->
+    <svg class="cloud cloud-1" viewBox="0 0 200 100">
+      <path d="M60 80 Q20 80 30 55 Q20 35 45 40 Q50 15 80 30 Q100 10 130 30 Q160 25 165 50 Q190 55 170 80 Z" />
+    </svg>
+
+    <!-- Cloud 2 -->
+    <svg class="cloud cloud-2" viewBox="0 0 200 100">
+      <path d="M60 80 Q20 80 30 55 Q20 35 45 40 Q50 15 80 30 Q100 10 130 30 Q160 25 165 50 Q190 55 170 80 Z" />
+    </svg>
+
+    <!-- Cloud 3 -->
+    <svg class="cloud cloud-3" viewBox="0 0 200 100">
+      <path d="M60 80 Q20 80 30 55 Q35 35 45 40 Q40 15 80 30 Q100 10 130 30 Q160 25 165 50 Q170 55 170 80 Z" />
+    </svg>
+
+  </div>
     <h1>Lucas Chauvin</h1>
     <p>
       Driven by a lifelong passion for aviation.
