--- a/index.html
+++ b/index.html
@@ -31,6 +31,16 @@
       <path d="M60 80 Q20 80 30 55 Q35 35 45 40 Q40 15 80 30 Q100 10 130 30 Q160 25 165 50 Q170 55 170 80 Z" />
     </svg>
 
+    <!-- Cloud 4 -->
+    <svg class="cloud cloud-4" viewBox="0 0 200 100">
+      <path d="M60 80 Q20 80 30 55 Q20 35 45 40 Q50 15 80 30 Q100 10 130 30 Q160 25 165 50 Q190 55 170 80 Z" />
+    </svg>
+
+    <!-- Cloud 5 -->
+    <svg class="cloud cloud-5" viewBox="0 0 200 100">
+      <path d="M60 80 Q20 80 30 55 Q20 35 45 40 Q50 15 80 30 Q100 10 130 30 Q160 25 165 50 Q190 55 170 80 Z" />
+    </svg>
+
   </div>
     <h1>Lucas Chauvin</h1>
     <p>
@@ -279,7 +289,7 @@ l347 -3 0 -28 c0 -27 3 -29 53 -35 28 -3 82 -6 120 -6 60 0 67 -2 67 -20 0
           <p>
             To get the required amount of hours, I have flown <b>alone, with passengers or with other pilots</b> who are now working for major european airlines.
           <p>
-            The flights were mainly on the <b>DR400</b> (DR400-120 and DR400-140B) in the <b>northern and western part of France</b> departing from Lognes (LFPL), as well as in the <b>french Alps</b>.
+            The flights were mainly on the <b>DR400</b> (DR400-120 and DR400-140B) in the <b>northern and western part of France</b> departing from <b>Lognes (LFPL)</b>, as well as in the <b>french Alps</b>.
           </p>
           <p>
             This time building was also a good time to <b>share my passion with my family, colleagues and friends</b>, who all now have very good memories in the air.
@@ -316,13 +326,13 @@ l347 -3 0 -28 c0 -27 3 -29 53 -35 28 -3 82 -6 120 -6 60 0 67 -2 67 -20 0
         </div>
         <div class="card-content">
           <p>
-            Motivated, disciplined, and eager to continuously learn, I am committed to applying my engineering background and strong technical skills to operate as a pilot with the highest standards of safety, efficiency, and professionalism.
+            <b>Motivated</b>, <b>disciplined</b>, and <b>eager to continuously learn</b>, I am committed to applying my engineering background and strong technical skills to operate as a pilot with the <b>highest standards of safety</b>, <b>efficiency</b>, and <b>professionalism</b>.
           </p>
           <p>
             I place great importance on <b>procedural compliance</b>, sound <b>decision-making</b>, <b>teamwork</b> and <b>situational awareness</b>, while always keeping <b>passenger comfort</b> and <b>customer satisfaction at the center of every operation</b>.
           </p>
           <p>
-            I am driven to grow, adapt, and contribute positively within a professional flight crew and operational environment.
+            I am driven to <b>grow</b>, <b>adapt</b>, and <b>contribute</b> positively within a <b>professional flight crew</b> and <b>operational environment</b>.
           </p>
           <br/>
           <a href="https://www.linkedin.com/in/lucas--chauvin"
@@ -378,7 +388,7 @@ l347 -3 0 -28 c0 -27 3 -29 53 -35 28 -3 82 -6 120 -6 60 0 67 -2 67 -20 0
               <img class="mock-image" src="resources/image/IFF.webp" alt="IFF Transponder">
             </div>
             <div class="timeline-content-text">
-            <p>From <b>January 2025</b> to <b>May 2026</b>
+            <p>From <b>September 2020</b> to <b>August 2023</b>
                 &nbsp;&nbsp;&nbsp;<img style="width: 100px" src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/21/Thales_Logo.svg/1280px-Thales_Logo.svg.png" alt="Thales Logo">
               </p>
               <p>
@@ -436,29 +446,29 @@ l347 -3 0 -28 c0 -27 3 -29 53 -35 28 -3 82 -6 120 -6 60 0 67 -2 67 -20 0
             </tr>
             <tr>
               <td>Class 1 Medical</td>
-              <td>France</td>
+              <td>POLAND</td>
               <td>13/11/2025</td>
               <td>13/11/2026</td>
               <td>-</td>
             </tr>
             <tr>
               <td>PPL(A)</td>
-              <td>France</td>
-              <td>05/03/2024</td>
+              <td>FRANCE (in transfer to POLAND)</td>
+              <td>02/09/2015</td>
               <td>-</td>
               <td>Skilltest passed on first attempt ✔</td>
             </tr>
             <tr>
               <td>SEP(L)</td>
-              <td>France</td>
-              <td>05/03/2024</td>
+              <td>FRANCE (in transfer to POLAND)</td>
+              <td>02/09/2015</td>
               <td>31/05/2026</td>
               <td>Skilltest passed of first attempt ✔</td>
             </tr>
             <tr>
               <td>Night Rating</td>
-              <td>France</td>
-              <td>05/03/2024</td>
+              <td>FRANCE (in transfer to POLAND)</td>
+              <td>03/01/2025</td>
               <td>-</td>
               <td>-</td>
             </tr>
@@ -600,34 +610,34 @@ l347 -3 0 -28 c0 -27 3 -29 53 -35 28 -3 82 -6 120 -6 60 0 67 -2 67 -20 0
 
     <section>
       <!-- FINAL CARD WITH PICTURE AND LINKEDIN -->
-      <div class="card with-image">
+      <div class="card with-image" style="display: flex; align-items: center; ">
         <div class="card-image">
           <img class="mock-img" src="resources/image/cv.jpg" alt="CV Picture">
         </div>
-        <div class="card-content">
-          <p>
-            Motivated, disciplined, and eager to grow.
-          </p>
-          <p>
-            Ready to contribute, ready to learn.
-          </p>
-          <p>
-            Could the next chapter of my career be a collaboration with you?
-          </p>
-          <br/>
-          <a href="https://www.linkedin.com/in/lucas--chauvin"
-            target="_blank"
-            class="linkedin-btn" style="align-self: center; margin-top: 30px">
-            
-            <svg xmlns="http://www.w3.org/2000/svg"
-                viewBox="0 0 448 512"
-                width="20" height="20" fill="white">
-              <path d="M100.28 448H7.4V148.9h92.88zm-46.44-340C24.77 108 0 83.24 0 53.7S24.77-0 53.84-0s53.84 24.77 53.84 53.7-24.77 54.3-53.84 54.3zM447.9 448h-92.68V302.4c0-34.7-.7-79.4-48.4-79.4-48.4 0-55.8 37.8-55.8 76.9V448h-92.7V148.9h89V184h1.3c12.4-23.5 42.7-48.4 87.9-48.4 94 0 111.2 61.9 111.2 142.3V448z"/>
-            </svg>
+          <div class="card-content" style="align-self:center; text-align: center; flex: auto;">
+            <p>
+              Motivated, disciplined, and eager to grow.
+            </p>
+            <p>
+              Ready to contribute, ready to learn.
+            </p>
+            <p>
+              Could the next chapter of my career be a collaboration with you?
+            </p>
+            <br/>
+            <a href="https://www.linkedin.com/in/lucas--chauvin"
+              target="_blank"
+              class="linkedin-btn" style="align-self: center; margin-top: 30px">
+              
+              <svg xmlns="http://www.w3.org/2000/svg"
+                  viewBox="0 0 448 512"
+                  width="20" height="20" fill="white">
+                <path d="M100.28 448H7.4V148.9h92.88zm-46.44-340C24.77 108 0 83.24 0 53.7S24.77-0 53.84-0s53.84 24.77 53.84 53.7-24.77 54.3-53.84 54.3zM447.9 448h-92.68V302.4c0-34.7-.7-79.4-48.4-79.4-48.4 0-55.8 37.8-55.8 76.9V448h-92.7V148.9h89V184h1.3c12.4-23.5 42.7-48.4 87.9-48.4 94 0 111.2 61.9 111.2 142.3V448z"/>
+              </svg>
 
-            Connect on LinkedIn
-          </a>
-        </div>
+              Connect on LinkedIn
+            </a>
+          </div>
       </div>
     </section>
 
