--- a/index.html
+++ b/index.html
@@ -308,8 +308,12 @@ l347 -3 0 -28 c0 -27 3 -29 53 -35 28 -3 82 -6 120 -6 60 0 67 -2 67 -20 0
           <h3>Bartolini Air</h3>
           <p>
             I joined Bartolini in June 2025.
+          </p>
           <p>
-            After a longer than planned training (because of operational reasons), I passed my <b>CPL IR MEP skilltests</b> on the <b>first attempt</b> on the <b>28th of January 2026</b>.
+            The planes used for the CPL IR ME training were the Tecnam P2006T and P2008JC. 
+          </p>
+          <p>
+            After a longer than planned training (because of operational reasons), I passed my <b>CPL IR ME skilltests</b> on the <b>first attempt</b> on the <b>28th of January 2026</b>.
           </p>
           <p>
             The life in Lodz, Poland was very nice, and living abroad has strengthened my <b>will to work in an international environment</b>.
