--- a/index.html
+++ b/index.html
@@ -329,6 +329,7 @@ l347 -3 0 -28 c0 -27 3 -29 53 -35 28 -3 82 -6 120 -6 60 0 67 -2 67 -20 0
           <img class="mock-img" src="resources/image/flying.jpg" alt="Flying IFR">
         </div>
         <div class="card-content">
+          <h3>Future</h3>
           <p>
             <b>Motivated</b>, <b>disciplined</b>, and <b>eager to continuously learn</b>, I am committed to applying my engineering background and strong technical skills to operate as a pilot with the <b>highest standards of safety</b>, <b>efficiency</b>, and <b>professionalism</b>.
           </p>
